docs: link section and more metatags added

--- a/7-index-basic-structure-head.html
+++ b/7-index-basic-structure-head.html
@@ -100,8 +100,72 @@
                         <br/>
                         Sirve para definir las palabras clave que ayudarán a los motores de búsqueda a mostrar nuestra página web al usuario, de una manera fácil y rápida.
                     </li>
+                    <br/>
+                    <li>
+                        <b>< meta name="robots" content="index,follow" /></b> - Para indicarle a los robots de los buscadores en general.
+                        <br/>
+                        <b>< meta name="googlebot" content="index,follow" /></b> - Para indicarle, específicamente, a los robots del buscador de Google.
+                        <br/>
+                        Robots de posicionamiento de los navegadores
+                        <br/>
+                        Nos ayuda a indicar a los motores de búsqueda para que puedan indexar nuestra página web para poderlas posicionar entre las primeras páginas de la lista de resultados. 
+                        <br/>
+                        * <b>content="index,follow"</b> autoriza a ayudar a posicionar nuestra página en los resultados de búsquedas que tengan que ver con el contenido de nuestra web.
+                        <br/>
+                        El valor "follow" es importante para activar el seguimiento de nuestro "index". Para dejar de seguir nuestro index, o para desactivar el seguimiento, se reemplaza por "unfollow", quedando como <b>content="index,unfollow"</b>.
+                    </li>
+                    <br/>
+                    <li>
+                        <b>< title > < title / > </b>
+                        <br/>
+                        Sirve para redactar el título del proyecto, el nombre que pongamos a la página. Este texto aparecerá en la pestaña de la página, en el navegador. Es importante colocar el título.
+                    </li>
+                    <br/>
+                    <li>
+                        <b>< meta name="viewport" content="width=device-width, initial-scale=1.0" /></b>
+                        <br/>
+                        <b>name="viewport"</b> hace mención al tamaño o width completo de la pantalla. Quiere decir, el tamaño que se genera en tiempo real, al modificar estirándo el ancho de la pantalla, eso es un viewport.
+                        <br/>
+                        Es muy importante para los proyectos que son <b>Responsive Design</b>. Actualmente todos los proyectos que se están realizando y los proyectos que tenemos que realizar, son y serán 100% Responsive Design.
+                        <br/>
+                        Es importante asegurarnos que esa etiqueta <b>meta</b> exista en todos nuestros proyectos, ya que <b>nos ayuda a moldear el tamaño</b> del texto y las imágenes dependiendo del dispositivo desde donde lo estamos abriendo, ya sea en un dispositivo <b>mobile</b>, o desde un navegador en el Escritorio/<b>desktop</b>.
+                        <br/>
+                        Si no agregamos esa etiqueta en nuestro proyecto, al momento de abrir nuestro proyecto en un dispositivo mobile, el tamaño del texto se verá chiquito, y habrá una desconfiguración en la posición del texto y las imágenes, y eso es una muy mala experiencia para el usuario.
+                        <br/>
+                    </li>
+                    <br/>
+                    <li>
+                        Es MUY IMPORTANTE asegurarnos que el usuario no pase por ninguna mala experiencia al momento de probar nuestra aplicación o WebApp.
+                    </li>
+                    <br/>
+                    <li>
+                        < link rel="stylesheet" href="style.css">
+                        <br/>
+                        <b>rel="stylesheet"</b>  -  Indica que el documento que se cargará, será una hoja de estilos.
+                        <br/>
+                        <b>href="style.css"</b>  -  Indica la referencia de dónde se encontrará ese documento. Como valor, <b>se coloca la ruta</b> en donde se encontrará el documento.
+                    </li>
+                    <br/>
+                    <li>
+                        TENEMOS QUE SER MUY DESCRIPTIVOS al momento de elegir los nombres de los documentos de texto donde se costruirá cada parte de nuestros proyectos.
+                    </li>
                 </ul>
             </div>                
+        </article>
+        <br/>
+        <article>
+            <h3>Links de referencia:</h3>
+            <p>
+                PDF con todas las Etiquetas de HTML5: https://i.emezeta.com/weblog/html5-cheatsheet/html5-cheatsheet-2019.pdf
+                <br/>
+                Página que ayuda mucho para conocer las etiquetas HTML y su tipo de display: https://htmlreference.io/
+                <br/>
+                Etiquetas HTML, versión "Tabla Periódica": https://allthetags.com/  -  https://lenguajehtml.com/html/introduccion/tabla-periodica-html5/
+                <br/>
+                Tipología "Jetbrains Mono", tiene distintas ligaduras y es muy bonita: https://www.jetbrains.com/lp/mono/
+                <br/>
+                Agregar ícono a nuestra página web: https://platzi.com/comentario/2637880/
+            </p>
         </article>
         <br/>
         <article>
