docs: tag 'p' PNG updated

--- a/11-types-of-images.html
+++ b/11-types-of-images.html
@@ -71,6 +71,8 @@
                     </dl>
                     <p>
                         -Usamos PNG para hacer logotipos o íconos que necesiten usar transparentes.
+                        <br>
+                        -Todas las imágenes están creadas dentro de un cuadrado, o una "caja". La forma esférica de algunos logos o imágenes, es por el uso del transparente que admite el formato PNG.
                         <br/>
                         -Cuando la empresa, o el diseñador nos pasen los logotipos, debemos pedirles que nos los pase en PNG, para usar el logotipo sin ningún tipo de problema.
                         <br/>
