docs: updated 'figure' and 'figcaption' sections

--- a/12-figure-tag.html
+++ b/12-figure-tag.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Etiqueta 'figure'</h1>
+        <h1>Etiquetas para la manipulación de imágenes: 'figure' y 'figcaption'</h1>
     </header>
     <main>
         <section>
@@ -20,9 +20,9 @@
                             <dd>
                                 Es una etiqueta contenedora, que está creada para almacenar una o varias imágenes con la etiqueta 'img'.
                                 <br/>
-                                Sirve para poder definir una dimensión y posición a 'figure', y automáticamente a la etiqueta imagen, <b>< img / ></b>.
+                                Podremos definir una dimensión y posición a 'figure' y, automáticamente, a la etiqueta imagen, <b>< img / ></b>.
                                 <br/>
-                                Su uso es parte de las buenas prácticas, y semánticamente, es lo correcto para el navegador.
+                                Su uso es parte de las buenas prácticas y, semánticamente, es lo correcto para el navegador.
                             </dd>
                         </dl>
                     </p>
@@ -32,9 +32,9 @@
                         <dl>
                             <dt><b>< figcaption > < / figcaption ></b></dt>
                             <dd>
-                                Esta etiqueta sirve mostrar al pié de la imagen, una muy breve descripción, autor, o algo importante que haga referencia a la imagen.
+                                Esta etiqueta sirve para mostrar al pié de la imagen, una muy breve descripción, nombre del autor, o algo importante que tenga relación con la imagen.
                                 <br/>
-                                Es una descripción similar a lo que vendría a tener la etiqueta 'alt', pero que, visualmente, pueda ayudar a explicar sobre la imagen que estamos viendo, en caso sea necesario.
+                                Tiene un contenido similar a lo que vendría a ser el contenido de la etiqueta 'alt', pero que visualmente, pueda ayudar a explicar sobre la imagen que estamos viendo, en caso sea necesario.
                                 <br/>
                                 <b>Va dentro de</b> la etiqueta contenedora <b>< figure > < / figure ></b>.
                                 <br/>
