--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <li><a href="https://mavefers.github.io/html-css-es/12-figure-tag.html" target="_blank" rel="noopener noreferrer">figure-tag</a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/13-image-optimization.html" target="_blank" rel="noopener noreferrer">image-optimization</a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/14-img-tag.html" target="_blank" rel="noopener noreferrer">img-tag</a></li>
-                        <li><a href="https://mavefers.github.io/html-css-es/" target="_blank" rel="noopener noreferrer"></a></li>
+                        <li><a href="https://mavefers.github.io/html-css-es/15-video-tag.html" target="_blank" rel="noopener noreferrer">video-tag</a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/" target="_blank" rel="noopener noreferrer"></a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/" target="_blank" rel="noopener noreferrer"></a></li>
                         <li><a href="https://mavefers.github.io/html-css-es/" target="_blank" rel="noopener noreferrer"></a></li>
