docs: added images section

--- a/13-image-optimization.html
+++ b/13-image-optimization.html
@@ -28,12 +28,13 @@
                     <h3><i>Links</i></h3>
                     <p>Herramientas para optimizar imágenes:</p>
                     <ul>
+                        <li><a href="https://picresize.com/" target="_blank">Picresize</a> - ¡RECOMENDADO! Comprime, recorta el tamaño y gradua el peso de la imagen por Kilobytes.</li>
+                        <li><a href="https://squoosh.app/" target="_blank">Squoosh</a> - ¡RECOMENDADO! Squoosh es el mejor optimizador de imágenes</li>
                         <li><a href="https://tinypng.com/" target="_blank">Tiny PNG</a> - Web para comprimir imágenes <b>lossy</b> (con pérdidas), para hacerlas más ligeras.</li>
                         <li><a href="https://www.verexif.com/" target="_blank">Verefix</a> - Elimina los metadatos de una imagen para reducir su peso.</li>
                         <li><a href="https://imagecompressor.com/es/" target="_blank">Optimizilla</a> - Web para comprimir imagenes online.</li>
                         <li><a href="https://www.iloveimg.com/es">iLoveIMG</a> - Herramienta online para editar y comprimir imágenes.</li>
                         <li><a href="https://compressor.io/" target="_blank">Compressor.io</a> - Comprime imágenes sin perder calidad. (Superior a TinyPNG)</li>
-                        <li><a href="https://picresize.com/" target="_blank">Picresize</a> - Comprime y recorta el tamaño de la imagen.</li>
                         <li><a href="https://convertio.co/es/jpg-svg/" target="_blank">Convertio</a> - Convierte imágenes en formato JPG y PNG a SVG. (Esta página es muy recomendada, puede convertir de todo a otros formatos, y es gratis)</li>
                     </ul>
                     <p>Metadatos: Información y detalles que puede almacenar una imagen, como hora de captura, localización entre otros datos más.</p>
@@ -48,6 +49,21 @@
                         <li><a href="https://magdeleine.co/" target="_blank">Magdeleine</a></li>
                         <li><a href="https://search.creativecommons.org/" target="_blank">Creativecommons</a></li>
                         <li><a href="https://www.freejpg.com.ar/" target="_blank">Freejpg</a></li>
+                    </ul>
+                </div>
+                <br/>
+                <div>
+                    <h3>Imágenes - Images</h3>
+                    <ul>
+                        <li>
+                            <figcaption>Resumen de la clase.</figcaption>
+                            <figure><img src="https://static.platzi.com/media/user_upload/Group%203-5041c589-a4c1-4df8-b637-58a5f99b45b7.jpg" alt="Resumen de la clase con información completa."></figure>
+                        </li>
+                        <li>
+                            <figcaption>Datos extras de la clase.</figcaption>
+                            <figure><img src="https://static.platzi.com/media/user_upload/tipos%20de%20im%C3%A1genes%20%26%20optimizaci%C3%B3n-5917b5df-9db7-4879-8bff-7a16aeb5019a.jpg" alt="Resumen y datos extras de la clase." width="900" ></figure>
+                        </li>
+                        <li><figure><img src="" alt=""></figure></li>
                     </ul>
                 </div>
             </article>
