docs: an added section

--- a/15-video-tag.html
+++ b/15-video-tag.html
@@ -90,6 +90,14 @@
                         <source src="./video/short.flv" type="video/flv"/>
                     </video>
                 </div>
+                <br>
+                <div>
+                    <h3>Enlaces extras:</h3>
+                    <ul>
+                        <li>Más información sobre la etiqueta/elemento <i>< video > </i> en W3Schools.com >>> <a href="https://www.w3schools.com/tags/tag_video.asp" target="_blank" rel="noopener noreferrer">link</a></li>
+                        <li>Más información sobre el atributo <i>poster="URL"</i> en W3Schools.com >>> <a href="https://www.w3schools.com/tags/att_video_poster.asp" target="_blank" rel="noopener noreferrer">link</a></li>
+                    </ul>
+                </div>
             </article>
         </section>
     </main>
