docs: added new section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
                         <li><a href="https://mavefers.github.io/html-css-es/" target="_blank" rel="noopener noreferrer"></a></li>
                     </ol>
                 </div>
+                <br/>
+                <div>
+                    <h3>Herramientas de ayuda:</h3>
+                    <ul>
+                        <li>Atajos de Visual Studio Code (VSC) >>> <a href="https://tecnoloco.istocks.club/metodos-abreviados-de-teclado-esenciales-para-visual-studio-code/2020-05-30/" target="_blank">link</a></li>
+                    </ul>
+                </div>
             </article>
         </section>
     </main>
