docs: added iframe section

--- a/15-video-tag.html
+++ b/15-video-tag.html
@@ -98,6 +98,23 @@
                         <li>Más información sobre el atributo <i>poster="URL"</i> en W3Schools.com >>> <a href="https://www.w3schools.com/tags/att_video_poster.asp" target="_blank" rel="noopener noreferrer">link</a></li>
                     </ul>
                 </div>
+                <br>
+                <div>
+                    <h3>iframe - Añadir videos de youtube a nuestra página web</h3>
+                    <p>
+                        iframe (de inline frame), representa un contexto de navegación anidado, el cual permite incrustar otra página HTML en nuestra página actual, la cual estamos construyendo.
+                        <br/>
+                        <q>También podemos agregar opciones, o "variables" al vídeo, añadiendo código al URL que está como valor en la etiqueta <i>src=" "</i>. Como por ejemplo, '?autoplay=1' para que el video de reproduzca automáticamente, '?mute=1' para que el video inicie sin sonido, '?loop=1' para crear un loop en el video, y '?controls=0' para quitar los controles del reproductor.</q>
+                        <p>Nota: No se puede insertar videos catalogados como musicales o videoclips.</p>
+                    </p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/0yj2jy_4tAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <br/>
+                    <p>Video musical: "The Weeknd - How Do I Make You Love Me? (Official Music Video)"</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VLMo0rthnoo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <br/>
+                    <p>También veremos esta etiqueta cuando insertemos un mapa de Google Maps, entre otras cosas más:</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!4v1660066474292!6m8!1m7!1sCAoSLEFGMVFpcE9rSmJoUms1RjBmaWJ5Rlg5UVVSa25mY0hGdUtLRVJ1NGR4anNO!2m2!1d-4.106208731798616!2d-81.05750039219856!3f162.38258530949713!4f9.035357481639664!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </article>
         </section>
     </main>
